force-app/main/default/objects/EntityWorkTypeParameters__c/EntityWorkTypeParameters__c.object-meta.xml
<CustomObject>
    <label>Paramètres Entité/Type d&apos;activité</label>
    <nameField>
        <displayFormat>PEWT/{0000000}</displayFormat>
        <label>Numéro de paramètre</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Paramètres Entité/Type d&apos;activité</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>