force-app/main/default/objects/EntityWorkTypeParameters__c/fields/autoSchedulingDelay__c.field-meta.xml
<CustomField>
    <fullName>autoSchedulingDelay__c</fullName>
    <inlineHelpText>Durée en heures avant planification automatique</inlineHelpText>
    <label>Délai de planification automatique</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>