force-app/main/default/objects/EntityWorkTypeParameters__c/fields/dueDateDelay__c.field-meta.xml
<CustomField>
    <fullName>dueDateDelay__c</fullName>
    <label>Délai au plus tard</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>