force-app/main/default/objects/EntityWorkTypeParameters__c/fields/estimatedDuration__c.field-meta.xml
<CustomField>
    <fullName>estimatedDuration__c</fullName>
    <inlineHelpText>Durée en minutes du temps administratif</inlineHelpText>
    <label>Durée estimée</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>