force-app/main/default/objects/EntityWorkTypeParameters__c/fields/KparKReference__c.field-meta.xml
<CustomField>
    <fullName>KparKReference__c</fullName>
    <externalId>true</externalId>
    <label>Référence</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>