force-app/main/default/objects/EntityWorkTypeParameters__c/fields/schedulingPolicy__c.field-meta.xml
<CustomField>
    <fullName>schedulingPolicy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stratégie d&apos;optimisation</label>
    <referenceTo>FSL__Scheduling_Policy__c</referenceTo>
    <relationshipLabel>Paramètres Entité/Type d&apos;activité</relationshipLabel>
    <relationshipName>Param_tres_Entit_Type_d_activit</relationshipName>
    <type>Lookup</type>
</CustomField>