force-app/main/default/objects/EntityWorkTypeParameters__c/fields/workType__c.field-meta.xml
<CustomField>
    <fullName>workType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Type d&apos;activité</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Paramètres Entité/Type d&apos;activité</relationshipLabel>
    <relationshipName>EntityWorkTypeParameters</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>