force-app/main/default/objects/EntityWorkTypeParameters__c/validationRules/VR_K3_AutoSchedulingDelay.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_AutoSchedulingDelay</fullName>
    <active>true</active>
    <description>Vérifier que la valeur est vide ou strictement supérieur à 0.</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = FALSE &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
!ISNULL(autoSchedulingDelay__c) &amp;&amp;
autoSchedulingDelay__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>autoSchedulingDelay__c</errorDisplayField>
    <errorMessage>Délai de planification invalide (doit être strictement supérieure à 0)!</errorMessage>
</ValidationRule>