force-app/main/default/objects/EntityWorkTypeParameters__c/validationRules/VR_K3_DueDateDelay.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_DueDateDelay</fullName>
    <active>true</active>
    <description>Le délai au plus tard doit être supérieur à 0 si il est renseigné</description>
    <errorConditionFormula>NOT(ISNULL(dueDateDelay__c)) &amp;&amp; (dueDateDelay__c &lt;= 0)</errorConditionFormula>
    <errorDisplayField>dueDateDelay__c</errorDisplayField>
    <errorMessage>Le délai au plus tard doit être plus grand que 0 lorsqu&apos;il est défini</errorMessage>
</ValidationRule>