force-app/main/default/objects/EntityWorkTypeParameters__c/validationRules/VR_K3_EstimatedDuration.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_EstimatedDuration</fullName>
    <active>true</active>
    <errorConditionFormula>$User.ByPassValidationRule__c = FALSE &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
!ISNULL(estimatedDuration__c) &amp;&amp;
estimatedDuration__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>estimatedDuration__c</errorDisplayField>
    <errorMessage>Durée estimée invalide (doit être strictement supérieure à 0)!</errorMessage>
</ValidationRule>