force-app/main/default/objects/EntityWorkTypeParameters__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>KparKReference__c</columns>
    <columns>entity__c</columns>
    <columns>workType__c</columns>
    <columns>estimatedDuration__c</columns>
    <columns>autoSchedulingDelay__c</columns>
    <columns>schedulingPolicy__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>